--- a/templates/index.html
+++ b/templates/index.html
@@ -57,11 +57,11 @@ block content %}
   </div>
   <div class="mt-8">
     <a
-      href="{{ url_for('static', filename='img/sample_img.zip') }}"
+      href="https://drive.google.com/file/d/150fNHwky3XmtusSDa8CoZzPDPi3RIeB9/view?usp=sharing"
       class="inline-block bg-blue-500 text-white py-3 px-6 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition duration-300 w-full text-center"
-      download
+      target="_blank"
     >
-      샘플 이미지 다운로드
+      샘플 이미지 다운로드 (Google Drive)
     </a>
   </div>
   <div class="mt-8">
